syntax = "proto3";

package product_service;

option go_package = "app/grpc/server/proto";

service ProductService {
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message GetProductRequest {
    string id = 1;
}
message GetProductResponse {
    Product product = 1;
}
message ListProductsRequest {
    int32 page = 1;
    int32 page_size = 2;
}
message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
}
message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
}
message CreateProductResponse {
    Product product = 1;
}
message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}
message UpdateProductResponse {
    Product product = 1;
}
message DeleteProductRequest {
    string id = 1;
}
message DeleteProductResponse {
    string id = 1;
}
message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}
message ProductList {
    repeated Product products = 1;
}
